--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -255,9 +255,9 @@ bindsym $mod+v split v;exec notify-send "Tile Vertically"
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking;exec notify-send "Stacked layout"
-bindsym $mod+g layout tabbed;exec notify-send "Tabbed layout"
-bindsym $mod+e layout toggle split
+# bindsym $mod+s layout stacking;exec notify-send "Stacked layout"
+# bindsym $mod+g layout tabbed;exec notify-send "Tabbed layout"
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -268,8 +268,6 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# open new empty workspace
-bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace.sh
 #navigate workspaces
 bindsym $mod+Ctrl+j workspace next
 bindsym $mod+Ctrl+k workspace prev
@@ -379,6 +377,7 @@ for_window [class="^Steam$" title="^Steam - Self Updater$"] floating enable
 for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
 for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
 for_window [title="^Steam Keyboard$"] floating enable
+for_window [class="MEGAsync$"] floating enable
 
 #############################################
 # autostart applications/services on login: #
@@ -419,7 +418,7 @@ exec --no-startup-id nm-applet
 exec_always --no-startup-id feh --no-fehbg --bg-fill ~/Pictures/Wallpapers/poly.png
 
 #set powersavings for display:
-exec --no-startup-id xset s 480 dpms 600 600 600
+exec --no-startup-id xset -b s 480 dpms 600 600 600
 
 
 
@@ -433,6 +432,9 @@ exec_always --no-startup-id unclutter
 #transparency 
 # exec --no-startup-id xcompmgr -c -C -t-5 -l-5 -r4.2 -o.55 &
 exec_always --no-startup-id picom -CGb
+
+#Autotiling
+exec --no-startup-id autotiling
 
 #Hide Panel
 # exec_always --no-startup-id killall xfce4-panel
@@ -449,7 +451,7 @@ exec --no-startup-id redshift -l 38.7254:-9.1408
 exec --no-startup-id sleep 3 && megasync
 
 #Run Backup
-exec --no-startup-id sleep 60 && notify-send "Backup started" && ~/.config/i3/scripts/rclone_backup.sh;exec notify-send "Backup complete"
+# exec --no-startup-id sleep 60 && notify-send "Backup started" && ~/.config/i3/scripts/rclone_backup.sh;exec notify-send "Backup complete"
 
 #Low battery warning
 exec --no-startup-id ~/.config/i3/scripts/i3-battery-popup/i3-battery-popup -n -L 20
@@ -483,82 +485,19 @@ set $darkgrey		#383c4a
 set $grey		#b0b5bd
 set $mediumgrey		#8b8b8b
 set $yellowbrown	#e1b700
-set $aliz	#F0544C
-set $gray1F #1F1F1F
+set $aliz	        #F0544C
+set $red	        #F03232
+set $gray1F             #1F1F1F
 
 # define colors for windows:
-#class		        	border		bground		text		indicator	child_border
-client.focused		    $aliz   	$darkblue	$white		$purple		$aliz
-client.unfocused	    $darkblue	$darkblue	$grey		$purple		$darkgrey
-client.focused_inactive	$darkblue	$darkblue	$grey		$purple		$black
-client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
+#class		            border	bground		text		indicator	child_border
+client.focused		    $aliz   	$darkblue	$white		$red		$aliz
+client.unfocused	    $darkblue	$darkblue	$grey		$red		$darkgrey
+client.focused_inactive     $darkblue	$darkblue	$grey		$red		$black
+client.urgent		    $urgentred	$urgentred	$white		$red		$yellowbrown
 
 client.background    #1F1F1F
 
-############################################
-# bar settings (input comes from i3blocks) #
-############################################
-
-# Start i3bar to display a workspace bar 
-# (plus the system information i3status finds out, if available)
-#bar {
-#		font pango:Noto Sans Regular 10, FontAwesome 10
-#		status_command i3blocks -c ~/.config/i3/i3blocks.conf
-#	    	position top 
-#	    	i3bar_command i3bar --transparency
-# # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
-# # reference: https://i3wm.org/docs/userguide.html#_tray_output
-#		    tray_output primary
-#		    tray_padding 0
-
-# # When strip_workspace_numbers is set to yes, 
-# # any workspace that has a name of the form 
-# # “[n][:][NAME]” will display only the name.
-#strip_workspace_numbers yes
-##strip_workspace_name no
-
-#    colors {
-#		    separator          $aliz
-#		    background         $gray1F
-#		    statusline         $white
-#                          		# border 		        bg		txt		indicator
-#		focused_workspace	$aliz	   	$aliz		$white	$purple
-#		active_workspace	$lightblue      	$mediumgrey	$darkgrey	$purple
-#		inactive_workspace	$darkgrey   		$darkgrey	$grey		$purple
-#		urgent_workspace	$urgentred	    	$urgentred	$white		$purple 
-#	}
-#}
-
-# you can add different bars for multidisplay setups on each display:
-# set output HDMI-0 to the display you want the bar, --transparency can be set.
-# Transparency needs rgba color codes to be used where the last two letters are the transparency factor see here:
-# https://gist.github.com/lopspower/03fb1cc0ac9f32ef38f4
-# #08052be6 --> e6=90%
-
- #bar {	
-	#font pango:Noto Sans Regular 9, FontAwesome 9
-	#status_command i3blocks -c ~/.config/i3/i3blocks-2.conf
-	#i3bar_command i3bar --transparency
-	#output HDMI-0
-	#position bottom
-
- ## When strip_workspace_numbers is set to yes, 
- ## any workspace that has a name of the form 
- ## “[n][:][NAME]” will display only the name.
-#strip_workspace_numbers yes
-##strip_workspace_name no
-
-	#colors {
-		#separator          $purple
-		#background         $darkbluetrans
- #       	statusline         $white
-					#border		bg		txt		indicator
-		#focused_workspace	$lighterblue	$lighterblue	$darkblue	$purple
-		#active_workspace	$lightdblue	$lightdblue	$darkblue	$purple
-		#inactive_workspace	$darkblue	$darkblue	$lightdblue	$purple
-		#urgent_workspace	$urgentred	$urgentred	$white		$purple 
-	#}
-#}
 
 #####################################
 # Application menu handled by rofi: #
@@ -569,13 +508,8 @@ client.background    #1F1F1F
 bindsym $mod+d exec rofi -modi drun -show drun \
 		-config ~/.config/rofi/rofidmenu.rasi
                 
-bindsym F9 exec rofi -modi drun -show drun \
-		-config ~/.config/rofi/rofidmenu.rasi
 		
 ## rofi bindings for window menu (two bindings F10/$mod+t)
 
 bindsym $mod+t exec rofi -show window \
-		-config ~/.config/rofi/rofidmenu.rasi 
-
-bindsym F10 exec rofi -show window \
 		-config ~/.config/rofi/rofidmenu.rasi 
