--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -18,13 +18,16 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #191919
+;background = #191919
+background = #000
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
 primary = #F0544C
+;primary = #FFF
 secondary = #60769e
+;secondary = #888
 alert = #bd2c40
 green = #55aa55
 
@@ -446,7 +449,7 @@ expand-right = true
 format-spacing = 1
 
 label-open = 
-label-open-foreground = ${colors.primary}
+label-open-foreground = ${colors.secondary}
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
 label-separator = |
