--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -191,7 +191,7 @@ bindsym $mod+r mode "resize"; exec notify-send "Resize mode"
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
@@ -203,7 +203,8 @@ bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
 # lock with a picture:
 #bindsym $mod+l exec i3lock -i  ~/.config/i3/i3-lock-screen.png -p default|win -t
 # lock by blurring the screen:
-bindsym $mod+x exec ~/.config/i3/scripts/blur-lock.sh
+# bindsym $mod+x exec ~/.config/i3/scripts/blur-lock.sh
+bindsym $mod+x exec cinnamon-screensaver-command -l
 # bindsym $mod+x exec xfce4-session-logout -s
 
 # reload the configuration file
@@ -301,9 +302,9 @@ bindsym $mod+XF86AudioRaiseVolume exec amixer -D pulse sset Master 1%+ && pkill 
 bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill -RTMIN+1 i3blocks
 
 # mute
-#bindsym XF86AudioMute exec amixer sset Master toggle && killall -USR1 i3blocks
+bindsym XF86AudioMute exec amixer -D pulse sset Master toggle && killall -USR1 i3blocks
 #mute
-bindsym XF86AudioMute exec pamixer -t && notify-send "mute: $(pamixer --get-mute)"
+# bindsym XF86AudioMute exec pamixer -t && notify-send "mute: $(pamixer --get-mute)"
 
 bindsym XF86AudioPlay exec playerctl play-pause
 #bindsym XF86AudioPause exec playerctl pause
@@ -315,7 +316,7 @@ bindsym $mod+p exec /usr/local/bin/switch-audio-port
 
 ## App shortcuts
 bindsym $mod+w exec /usr/bin/firefox
-bindsym $mod+n exec /usr/bin/thunar
+bindsym $mod+n exec /usr/bin/nemo
 # bindsym Print exec "scrot ~/%Y-%m-%d-%T-screenshot.png"
 bindsym Print exec flameshot gui
 
@@ -344,11 +345,11 @@ set $ws10 "10"
 #workspace $ws3 output HDMI-0
 #workspace $ws4 output HDMI-0
 #workspace $ws5 output HDMI-0
-workspace $ws8 output eDP1
-workspace $ws9 output eDP1
+workspace $ws8 output eDP-1
+workspace $ws9 output eDP-1
 
 # move the whole workspace to the next output
-bindsym $mod+m move workspace to output next
+bindsym $mod+m move workspace to output left
 
 # bind program to workspace and focus to them on startup:
 #assign [class="Xfce4-terminal"] $ws1
@@ -357,7 +358,7 @@ bindsym $mod+m move workspace to output next
 #assign [class="Thunderbird"] $ws4
 assign [class="TelegramDesktop"] $ws5
 assign [title="Signal"] $ws8
-for_window [class="Spotify"] move to workspace $ws9
+assign [class="spotify"] $ws9
 
 
 
@@ -458,7 +459,7 @@ exec --no-startup-id ~/.config/i3/scripts/i3-battery-popup/i3-battery-popup -n -
 
 # set floating (nontiling)for apps needing it
 for_window [class="Yad" instance="yad"] floating enable
-for_window [class="Galculator" instance="galculator"] floating enable
+for_window [class="Gnome-calculator"] floating enable
 for_window [class="Blueberry.py" instance="blueberry.py"] floating enable
 
 #set floating (nontiling) for special apps
