--- a/hypr/.config/hypr/configs/WindowRules.conf
+++ b/hypr/.config/hypr/configs/WindowRules.conf
@@ -10,6 +10,9 @@ windowrule = float, eog
 windowrule = float, zoom
 windowrule = float, rofi
 windowrule = float, gnome-system-monitor
+windowrule = float, Calculator
+windowrule = size 20% 50%, Calculator
+windowrule = move 80% 50%, Calculator
 windowrule = float, yad
 
 #windowrule = noblur,gamescope
