--- a/hypr/.config/hypr/configs/Keybinds.conf
+++ b/hypr/.config/hypr/configs/Keybinds.conf
@@ -10,6 +10,22 @@ $configs = $HOME/.config/hypr/configs
 $UserConfigs = $HOME/.config/hypr/UserConfigs
 $UserScripts = $HOME/.config/hypr/UserScripts
 
+$files = thunar
+$term = kitty
+$browser = firefox
+$scriptsDir = $HOME/.config/hypr/scripts
+$UserScripts = $HOME/.config/hypr/UserScripts
+
+# rofi App launcher
+bind = $mainMod, D, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window
+
+bind = $mainMod, Return, exec, $term  # Launch terminal
+bind = $mainMod, N, exec, $files
+bind = $mainMod, W, exec, $browser
+
+# User Added Keybinds
+bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
+
 bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0
 bind = $mainMod, Q, killactive,
 bind = $mainMod, F, fullscreen
@@ -17,7 +33,9 @@ bind = $mainMod SHIFT, Q, closewindow,
 bind = $mainMod SHIFT, SPACE, togglefloating,
 bind = $mainMod ALT, F, exec, hyprctl dispatch workspaceopt allfloat
 bind = $mainMod, X, exec, $scriptsDir/LockScreen.sh
+bind = $mainMod SHIFT, S, exec, $scriptsDir/LockScreen.sh && systemctl suspend 
 bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh
+bind = $mainMod, EQUAL, exec, gnome-calculator
 
 # FEATURES / EXTRAS
 bind = $mainMod ALT, H, exec, $scriptsDir/KeyHints.sh # Small help file
@@ -39,7 +57,7 @@ bind = $mainMod CTRL, D, layoutmsg, removemaster
 bind = $mainMod, I, layoutmsg, addmaster
 bind = $mainMod, J, layoutmsg, cyclenext
 bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
+# bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
 
@@ -72,19 +90,19 @@ bind = $mainMod ALT, Print, exec, $scriptsDir/ScreenShot.sh --in10 #screenshot i
 bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 secs
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy
+# bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy
 
 # Resize windows
-binde = $mainMod SHIFT, H, resizeactive,-50 0
-binde = $mainMod SHIFT, L, resizeactive,50 0
-binde = $mainMod SHIFT, K, resizeactive,0 -50
-binde = $mainMod SHIFT, J, resizeactive,0 50
+binde = $mainMod CTRL, H, resizeactive,-50 0
+binde = $mainMod CTRL, L, resizeactive,50 0
+binde = $mainMod CTRL, K, resizeactive,0 -50
+binde = $mainMod CTRL, J, resizeactive,0 50
 
 # Move windows
-bind = $mainMod CTRL, H, movewindow, l
-bind = $mainMod CTRL, L, movewindow, r
-bind = $mainMod CTRL, K, movewindow, u
-bind = $mainMod CTRL, J, movewindow, d
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Move focus with mainMod + vim keys
 bind = $mainMod, H, movefocus, l
@@ -115,32 +133,32 @@ bind = $mainMod, code:18, workspace, 9
 bind = $mainMod, code:19, workspace, 10
 
 # Move active window and follow to workspace mainMod + SHIFT [0-9]
-bind = $mainMod SHIFT, code:10, movetoworkspace, 1
-bind = $mainMod SHIFT, code:11, movetoworkspace, 2
-bind = $mainMod SHIFT, code:12, movetoworkspace, 3
-bind = $mainMod SHIFT, code:13, movetoworkspace, 4
-bind = $mainMod SHIFT, code:14, movetoworkspace, 5
-bind = $mainMod SHIFT, code:15, movetoworkspace, 6
-bind = $mainMod SHIFT, code:16, movetoworkspace, 7
-bind = $mainMod SHIFT, code:17, movetoworkspace, 8
-bind = $mainMod SHIFT, code:18, movetoworkspace, 9
-bind = $mainMod SHIFT, code:19, movetoworkspace, 10
-bind = $mainMod SHIFT, bracketH, movetoworkspace, -1 # brackets [ or ]
-bind = $mainMod SHIFT, bracketL, movetoworkspace, +1
+bind = $mainMod CTRL, code:10, movetoworkspace, 1
+bind = $mainMod CTRL, code:11, movetoworkspace, 2
+bind = $mainMod CTRL, code:12, movetoworkspace, 3
+bind = $mainMod CTRL, code:13, movetoworkspace, 4
+bind = $mainMod CTRL, code:14, movetoworkspace, 5
+bind = $mainMod CTRL, code:15, movetoworkspace, 6
+bind = $mainMod CTRL, code:16, movetoworkspace, 7
+bind = $mainMod CTRL, code:17, movetoworkspace, 8
+bind = $mainMod CTRL, code:18, movetoworkspace, 9
+bind = $mainMod CTRL, code:19, movetoworkspace, 10
+bind = $mainMod CTRL, bracketH, movetoworkspace, -1 # brackets [ or ]
+bind = $mainMod CTRL, bracketL, movetoworkspace, +1
 
 # Move active window to a workspace silently mainMod + CTRL [0-9]
-bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1
-bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2
-bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3
-bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4
-bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5
-bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6
-bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7
-bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8
-bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9
-bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10
-bind = $mainMod CTRL, bracketH, movetoworkspacesilent, -1 # brackets [ or ]
-bind = $mainMod CTRL, bracketL, movetoworkspacesilent, +1
+bind = $mainMod SHIFT, code:10, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, code:11, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, code:12, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, code:13, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, code:14, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, code:15, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, code:16, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, code:17, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, code:18, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, code:19, movetoworkspacesilent, 10
+bind = $mainMod SHIFT, bracketH, movetoworkspacesilent, -1 # brackets [ or ]
+bind = $mainMod SHIFT, bracketL, movetoworkspacesilent, +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
