--- a/hypr/.config/hypr/configs/UserSettings.conf
+++ b/hypr/.config/hypr/configs/UserSettings.conf
@@ -30,7 +30,7 @@ general {
   border_size = 2
   resize_on_border = true
    
-  #col.active_border = $color3
+  col.active_border = $foregroundCol
   col.inactive_border = $backgroundCol
 
   layout = master
